# book-tok

./: .env.example  .gitignore  AGENTS.md  BOOKS_FEATURE_SUMMARY.md  Makefile  README.md  USER_GUIDE.md  masterplan.md  prd.json  progress.txt  pyproject.toml
.github/: copilot-instructions.md
.kiro/specs/telegram-book-bot/: design.md  requirements.md  tasks.md
scripts/: setup_bot.sh  start_screen.sh  stop_bot.sh  stop_screen.sh
scripts/ralph/: progress.txt  ralph.sh
src/: main.py
src/booktok/: __init__.py  ai_summarizer.py  book_processor.py  book_scanner.py  config.py  database.py  delivery_scheduler.py  input_validator.py  models.py  repository.py  snippet_formatter.py  snippet_generator.py  summary_preprocessor.py  telegram_bot.py
