[project]
name = "book-tok"
version = "0.1.0"
description = "A Telegram bot that delivers bite-sized learning snippets from PDF and EPUB books"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot",
    "PyPDF2",
    "EbookLib",
    "nltk",
    "beautifulsoup4",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["ebooklib", "ebooklib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["nltk", "nltk.*"]
ignore_missing_imports = true

[tool.uv.workspace]
members = [
    "booktok",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
    "hypothesis",
]
